Fixed the weather icon not showing for current. Missed that the current weather icon shows in the mockup. This has been corrected.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,10 @@
     border-bottom: 10px solid black;
   }
 
+h5 {
+    display: inline;
+}
+
 .weatherCard {
     text-align: left;
     background-color: darkblue;
